Do not unescape unit names in [Install] section

https://bugs.freedesktop.org/show_bug.cgi?id=49316